<resources>
    <string name="app_name">EligeBien-1.0.0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="elige_bien">Elige Bien</string>
    <string name="logo">Logo</string>
    <string name="or">or</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sign_in_with_email">sign in with email</string>
    <string name="sign_in_anonimous">sign in anonimous</string>
    <string name="facebook_app_id">1655485128049388</string>

</resources>
